add reduce original DS

--- a/Python3Code/phyphox_utils/reduce_original_ds.ipynb
+++ b/Python3Code/phyphox_utils/reduce_original_ds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
@@ -90,7 +90,101 @@
    "outputs": [],
    "source": [
     "# save to csv\n",
-    "dataset.to_csv(\"../phyphox-outputs/chapter2_result_250_labeled_aligned_minimal.csv\", index=False)"
+    "# dataset.to_csv(\"../phyphox-outputs/chapter2_result_250_labeled_aligned_minimal.csv\", index=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "cl = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [5])])\n",
+    "labels = cl.fit_transform(dataset).toarray()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save as dataset with labels as one-hot encoded\n",
+    "print(labels)\n",
+    "# add labels to dataset\n",
+    "dataset['label_0'] = labels[:,0]\n",
+    "dataset['label_1'] = labels[:,1]\n",
+    "dataset['label_2'] = labels[:,2]\n",
+    "dataset['label_3'] = labels[:,3]\n",
+    "dataset['label_4'] = labels[:,4]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 29948 entries, 0 to 29947\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   time       29948 non-null  object \n",
+      " 1   acc_x      29948 non-null  float64\n",
+      " 2   acc_y      29948 non-null  float64\n",
+      " 3   acc_z      29948 non-null  float64\n",
+      " 4   loc_speed  6298 non-null   float64\n",
+      " 5   label      29948 non-null  object \n",
+      " 6   label_0    29948 non-null  float64\n",
+      " 7   label_1    29948 non-null  float64\n",
+      " 8   label_2    29948 non-null  float64\n",
+      " 9   label_3    29948 non-null  float64\n",
+      " 10  label_4    29948 non-null  float64\n",
+      "dtypes: float64(9), object(2)\n",
+      "memory usage: 2.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [],
+   "source": [
+    "# save to csv\n",
+    "dataset.to_csv(\"../phyphox-outputs/chapter2_result_250_labeled_aligned_minimal_onehot.csv\", index=False)"
    ],
    "metadata": {
     "collapsed": false
