--- a/Python3Code/phyphox_utils/reduce_original_ds.ipynb
+++ b/Python3Code/phyphox_utils/reduce_original_ds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
@@ -59,23 +59,26 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 29948 entries, 0 to 29947\n",
-      "Data columns (total 6 columns):\n",
+      "Data columns (total 9 columns):\n",
       " #   Column     Non-Null Count  Dtype  \n",
       "---  ------     --------------  -----  \n",
       " 0   time       29948 non-null  object \n",
       " 1   acc_x      29948 non-null  float64\n",
       " 2   acc_y      29948 non-null  float64\n",
       " 3   acc_z      29948 non-null  float64\n",
-      " 4   loc_speed  6298 non-null   float64\n",
-      " 5   label      29948 non-null  object \n",
-      "dtypes: float64(4), object(2)\n",
-      "memory usage: 1.4+ MB\n"
+      " 4   lin_acc_x  29944 non-null  float64\n",
+      " 5   lin_acc_y  29944 non-null  float64\n",
+      " 6   lin_acc_z  29944 non-null  float64\n",
+      " 7   loc_speed  6298 non-null   float64\n",
+      " 8   label      29948 non-null  object \n",
+      "dtypes: float64(7), object(2)\n",
+      "memory usage: 2.1+ MB\n"
      ]
     }
    ],
    "source": [
     "# Leave only acc_x, acc_y, acc_z, speed and label\n",
-    "dataset = dataset[['Unnamed: 0','acc_x', 'acc_y', 'acc_z', 'loc_speed', 'label']]\n",
+    "dataset = dataset[['Unnamed: 0','acc_x', 'acc_y', 'acc_z', 'lin_acc_x','lin_acc_y','lin_acc_z', 'loc_speed', 'label']]\n",
     "# Rename 'Unnamed: 0 to 'time'\n",
     "dataset.rename(columns={'Unnamed: 0': 'time'}, inplace=True)\n",
     "dataset.info()"
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "# save to csv\n",
@@ -98,13 +101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "outputs": [],
+   "execution_count": 36,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "cl = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [5])])\n",
-    "labels = cl.fit_transform(dataset).toarray()"
+    "NUMBER_OF_COLUMN_CONTAINING_LABEL = 8\n",
+    "cl = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [NUMBER_OF_COLUMN_CONTAINING_LABEL])])\n",
+    "labels = cl.fit_transform(dataset).toarray()\n",
+    "print(labels)"
    ],
    "metadata": {
     "collapsed": false
@@ -112,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -132,11 +151,11 @@
     "# Save as dataset with labels as one-hot encoded\n",
     "print(labels)\n",
     "# add labels to dataset\n",
-    "dataset['label_0'] = labels[:,0]\n",
-    "dataset['label_1'] = labels[:,1]\n",
-    "dataset['label_2'] = labels[:,2]\n",
-    "dataset['label_3'] = labels[:,3]\n",
-    "dataset['label_4'] = labels[:,4]"
+    "dataset['label_cycling'] = labels[:,0]\n",
+    "dataset['label_hammocking'] = labels[:,1]\n",
+    "dataset['label_running'] = labels[:,2]\n",
+    "dataset['label_sitting'] = labels[:,3]\n",
+    "dataset['label_walking'] = labels[:,4]"
    ],
    "metadata": {
     "collapsed": false
@@ -144,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
@@ -152,22 +171,25 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 29948 entries, 0 to 29947\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column     Non-Null Count  Dtype  \n",
-      "---  ------     --------------  -----  \n",
-      " 0   time       29948 non-null  object \n",
-      " 1   acc_x      29948 non-null  float64\n",
-      " 2   acc_y      29948 non-null  float64\n",
-      " 3   acc_z      29948 non-null  float64\n",
-      " 4   loc_speed  6298 non-null   float64\n",
-      " 5   label      29948 non-null  object \n",
-      " 6   label_0    29948 non-null  float64\n",
-      " 7   label_1    29948 non-null  float64\n",
-      " 8   label_2    29948 non-null  float64\n",
-      " 9   label_3    29948 non-null  float64\n",
-      " 10  label_4    29948 non-null  float64\n",
-      "dtypes: float64(9), object(2)\n",
-      "memory usage: 2.5+ MB\n"
+      "Data columns (total 14 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   time              29948 non-null  object \n",
+      " 1   acc_x             29948 non-null  float64\n",
+      " 2   acc_y             29948 non-null  float64\n",
+      " 3   acc_z             29948 non-null  float64\n",
+      " 4   lin_acc_x         29944 non-null  float64\n",
+      " 5   lin_acc_y         29944 non-null  float64\n",
+      " 6   lin_acc_z         29944 non-null  float64\n",
+      " 7   loc_speed         6298 non-null   float64\n",
+      " 8   label             29948 non-null  object \n",
+      " 9   label_cycling     29948 non-null  float64\n",
+      " 10  label_hammocking  29948 non-null  float64\n",
+      " 11  label_running     29948 non-null  float64\n",
+      " 12  label_sitting     29948 non-null  float64\n",
+      " 13  label_walking     29948 non-null  float64\n",
+      "dtypes: float64(12), object(2)\n",
+      "memory usage: 3.2+ MB\n"
      ]
     }
    ],
@@ -180,21 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "# save to csv\n",
-    "dataset.to_csv(\"../phyphox-outputs/chapter2_result_250_labeled_aligned_minimal_onehot.csv\", index=False)"
+    "dataset.to_csv(\"../phyphox-outputs/chapter2_result_250_labeled_aligned_min_extended_onehot.csv\", index=False)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
