fix outlier detection script and add pca script

--- a/Python3Code/phyphox_utils/outlier_detection_labeled_aligned.ipynb
+++ b/Python3Code/phyphox_utils/outlier_detection_labeled_aligned.ipynb
@@ -19,7 +19,7 @@
    "execution_count": 14,
    "outputs": [],
    "source": [
-    "from Python3Code.util.VisualizeDataset import VisualizeDataset\n",
+    "from util.VisualizeDataset import VisualizeDataset\n",
     "from Python3Code.Chapter3.OutlierDetection import DistributionBasedOutlierDetection, DistanceBasedOutlierDetection\n",
     "\n",
     "# Create the outlier classes.\n",
