--- a/Python3Code/phyphox_utils/pca.ipynb
+++ b/Python3Code/phyphox_utils/pca.ipynb
@@ -19,7 +19,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "from Python3Code.util.VisualizeDataset import VisualizeDataset\n",
+    "from util.VisualizeDataset import VisualizeDataset\n",
     "\n",
     "DataViz = VisualizeDataset(\"pca\")"
    ],
